[gd_scene load_steps=6 format=3 uid="uid://blkqkhl6lubmj"]

[ext_resource type="Script" path="res://player_camera.gd" id="1_1in8d"]
[ext_resource type="Script" path="res://player.gd" id="1_kr2gb"]
[ext_resource type="Script" path="res://player_move.gd" id="2_048ev"]

[sub_resource type="SphereShape3D" id="SphereShape3D_73q7y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_52mmu"]
height = 1.8

[node name="Player" type="Node3D"]
script = ExtResource("1_kr2gb")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
collision_layer = 2
script = ExtResource("2_048ev")

[node name="Hand" type="SpringArm3D" parent="CharacterBody3D"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.86265e-08, 0.7, 5.96046e-08)
shape = SubResource("SphereShape3D_73q7y")
spring_length = 0.5

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("1_1in8d")

[node name="HandRay" type="RayCast3D" parent="CharacterBody3D/Camera3D"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -2)
collision_mask = 5
collide_with_areas = true
debug_shape_thickness = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_52mmu")

[node name="UiUsePrompt" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "E"
horizontal_alignment = 1

[node name="UiTorchesLeft" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 78.0
offset_right = 59.0
offset_bottom = 101.0
grow_horizontal = 2
text = "N torches left..."
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
